# yt-downloader

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md
output/cache/: video_cache.db
src/: main.rs
